internal/gatewayapi/testdata/gateway-with-listener-with-unsupported-protocol.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
      - name: unsupported
        protocol: TCP
        port: 80
        allowedRoutes:
          namespaces:
            from: All
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    parentRefs:
      - namespace: envoy-gateway
        name: gateway-1
    rules:
      - matches:
          - path:
              value: "/"
        backendRefs:
          - name: service-1
            port: 8080
